# shamrock

./: Cargo.toml  Dockerfile  build.rs  go.mod  go.sum
api/block/http/: handler.go  http.go
api/block/rpc/: hanlder.go  rpc.go
api/client/: client.go
api/meta/http/: handler.go  handler_helper.go  http.go  model.go
api/meta/rpc/: handler.go  rpc.go
cmd/block/: main.go
cmd/meta/: main.go
core/filestore/: filestore.go  filestore_helper.go  operate.go  rw_operate_test.go
core/kvstore/: kvstore.go  kvstore_helper.go
core/raft/: cluster.go  http.go  listener.go  raft.go  snapshot.go  wal.go
core/scheduler/: scheduler.go
example/: terminal.go
proto/: block_service.proto  meta_service.proto
proto/proto_gen/block_service/: block_service.pb.go  block_service_grpc.pb.go
proto/proto_gen/meta_service/: meta_service.pb.go  meta_service_grpc.pb.go
script/: proto_gen.sh
service/: consul.go  discovery.go
src/: api.rs  lib.rs
src/api/: block.rs  meta.rs
utils/: file.go  file_test.go  idgen.go  network.go
